--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
-    
   </head>
   <body>
-    
+    <div id="bracket" class="demo"></div>    
     <script src="/static/bundle.js"></script>
   </body>
 </html>
