Preparando en base a react boilerplate un proyecto cliente

--- a/templates/index.html
+++ b/templates/index.html
@@ -1,9 +1,12 @@
 <!DOCTYPE html>
-<html>
-  <head>
-  </head>
-  <body>
-    <div id="bracket" class="demo"></div>    
-    <script src="/static/bundle.js"></script>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <title>Example Index</title>
+</head>
+<body>
+  <div id="root"></div>
+  <!-- <script src="/static/bundle.js"></script> -->
+  <script src="http://127.0.0.1:8080/bundle.js"></script>
   </body>
 </html>
