--- a/templates/index.html
+++ b/templates/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Example Index</title>
+  <link rel="stylesheet" href="/static/semantic/semantic.min.css">
 </head>
 <body>
   <div id="root"></div>
