--- a/templates/index.html
+++ b/templates/index.html
@@ -2,12 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Example Index</title>
-  <link rel="stylesheet" href="/static/semantic/semantic.min.css">
+  <title>Hackathon</title>
 </head>
-<body>
-  <div id="root"></div>
-  <!-- <script src="/static/bundle.js"></script> -->
-  <script src="http://127.0.0.1:8080/bundle.js"></script>
+  <body>
+    <a href="/fixture">GraphQL</a>
+    <a href="/loads">Loads JSON</a>
+    <a href="/dumps">Dumps JSON</a>
   </body>
 </html>
