--- a/webclient/src/app/robot-card/robot-card.component.html
+++ b/webclient/src/app/robot-card/robot-card.component.html
@@ -5,9 +5,9 @@
   <div class="content">
     <a class="header">{{robot.nombre}}</a>
     <div class="meta">
-      <span class="date">Bla</span>
+      <span class="date">{{robot.escuela}}</span>
     </div>
-    <div class="description">Bla bla</div>
+    <div class="description">El encargado es {{robot.encargado}}</div>
   </div>
   <div class="extra content">
     <span class="left floated like"><i class="arrow up icon"></i> {{robot.score[0]}} </span>
