fix encuentro type

--- a/webclient/src/app/encuentro-card/encuentro-card.component.html
+++ b/webclient/src/app/encuentro-card/encuentro-card.component.html
@@ -1,5 +1,5 @@
 <div class="ui statistics">
-  <div class="statistic">
+  <div class="green statistic">
     <div class="value">
       <img src="/assets/escudos/{{encuentro.robots[0].escudo}}" class="ui circular inline image">
       {{encuentro.puntos[0] || 0}}
@@ -8,7 +8,7 @@
       {{encuentro.robots[0].nombre}}
     </div>
   </div>
-  <div class="statistic">
+  <div class="red statistic">
     <div class="value">
       <img src="/assets/escudos/{{encuentro.robots[1].escudo}}" class="ui circular inline image">
       {{encuentro.puntos[1] || 0}}
