Tabla de scores

--- a/templates/index.html
+++ b/templates/index.html
@@ -5,8 +5,10 @@
   <title>Hackathon</title>
 </head>
   <body>
-    <a href="/fixture">GraphQL</a>
-    <a href="/loads">Loads JSON</a>
-    <a href="/dumps">Dumps JSON</a>
+    <ul>
+    <li><a href="/fixture">GraphQL</a></li>
+    <li><a href="http://localhost:4200">Web App</a></li>
+    <li><a href="/loads">Loads JSON</a></li>
+    <li><a href="/dumps">Dumps JSON</a></li>
   </body>
 </html>
