--- a/webclient/src/app/app.component.html
+++ b/webclient/src/app/app.component.html
@@ -9,3 +9,5 @@
 <div class="ui four cards">
   <robot-card [robot]="robot" *ngFor="let robot of robots$ | async"></robot-card>
 </div>
+
+<robots-score-table></robots-score-table>
