--- a/webclient/src/app/robot-card/robot-card.component.html
+++ b/webclient/src/app/robot-card/robot-card.component.html
@@ -9,8 +9,5 @@
     </div>
     <div class="description">El encargado es {{robot.encargado}}</div>
   </div>
-  <div class="extra content">
-    <span class="left floated like"><i class="arrow up icon"></i> {{robot.score[0]}} </span>
-    <span class="right floated star"><i class="arrow down icon"></i> {{robot.score[1]}} </span>
-  </div>
 </div>
+<div class="clearafix"></div>
