--- a/webclient/src/app/app.component.html
+++ b/webclient/src/app/app.component.html
@@ -1,13 +1,3 @@
-<div class="ui inverted segment">
-  <h2 class="ui center aligned inverted header">
-    {{title}}
-  </h2>
-</div>
-
-<encuentro-card [encuentro]="encuentro" *ngFor="let encuentro of encuentrosActuales$ | async"></encuentro-card>
-
-<div class="ui four cards">
-  <robot-card [robot]="robot" *ngFor="let robot of robots$ | async"></robot-card>
-</div>
-
-<robots-score-table></robots-score-table>
+<app-menu></app-menu>
+<app-main></app-main>
+<app-footer></app-footer>
