--- a/webclient/src/app/encuentro-card/encuentro-card.component.html
+++ b/webclient/src/app/encuentro-card/encuentro-card.component.html
@@ -1,6 +1,6 @@
 <div class="ui equal width grid">
   <div class="column">
-    <img class="ui small image" src="/assets/escudos/{{encuentro.robots[0].escudo}}">
+    <img class="ui small image" src="/assets/images/escudos/{{encuentro.robots[0].escudo}}">
   </div>
   <div class="column">
     <div class="ui red huge statistic">
@@ -16,7 +16,7 @@
     <img class="ui small image" src="/assets/versus.png">
   </div>
   <div class="column">
-    <img class="ui small image" src="/assets/escudos/{{encuentro.robots[1].escudo}}">
+    <img class="ui small image" src="/assets/images/escudos/{{encuentro.robots[1].escudo}}">
   </div>
   <div class="column">
     <div class="ui green huge statistic">
