--- a/webclient/src/app/robot-card/robot-card.component.html
+++ b/webclient/src/app/robot-card/robot-card.component.html
@@ -1,6 +1,6 @@
 <div class="ui card">
   <div class="image">
-    <img src="/assets/escudos/{{robot.escudo}}">
+    <img src="/assets/images/escudos/{{robot.escudo}}">
   </div>
   <div class="content">
     <a class="header">{{robot.nombre}}</a>
