--- a/webclient/src/app/encuentro-card/encuentro-card.component.html
+++ b/webclient/src/app/encuentro-card/encuentro-card.component.html
@@ -1,30 +1,32 @@
-<div class="ui equal width grid">
-  <div class="column">
-    <img class="ui small image" src="/assets/images/escudos/{{encuentro.robots[0].escudo}}">
-  </div>
-  <div class="column">
-    <div class="ui red huge statistic">
-      <div class="label">
-        {{encuentro.robots[1].nombre}}
-      </div>
-      <div class="value">
-        {{encuentro.puntos[0] || 0}}
+<div class="ui blue segment">
+  <div class="ui equal width middle aligned grid">
+    <div class="column">
+      <img class="ui small image" src="/assets/images/escudos/{{encuentro.robots[0].escudo}}">
+    </div>
+    <div class="column">
+      <div class="ui red huge statistic">
+        <div class="label">
+          {{encuentro.robots[0].nombre}}
+        </div>
+        <div class="value">
+          {{encuentro.puntos[0] || 0}}
+        </div>
       </div>
     </div>
-  </div>
-  <div class="column">
-    <img class="ui small image" src="/assets/versus.png">
-  </div>
-  <div class="column">
-    <img class="ui small image" src="/assets/images/escudos/{{encuentro.robots[1].escudo}}">
-  </div>
-  <div class="column">
-    <div class="ui green huge statistic">
-      <div class="label">
-        {{encuentro.robots[1].nombre}}
-      </div>
-      <div class="value">
-        {{encuentro.puntos[0] || 0}}
+    <div class="column">
+      <img class="ui small image" src="/assets/images/versus.png">
+    </div>
+    <div class="column">
+      <img class="ui small image" src="/assets/images/escudos/{{encuentro.robots[1].escudo}}">
+    </div>
+    <div class="column">
+      <div class="ui red huge statistic">
+        <div class="label">
+          {{encuentro.robots[1].nombre}}
+        </div>
+        <div class="value">
+          {{encuentro.puntos[1] || 0}}
+        </div>
       </div>
     </div>
   </div>
