--- a/webclient/src/app/layout/footer/footer.component.html
+++ b/webclient/src/app/layout/footer/footer.component.html
@@ -1,10 +1,11 @@
 <div class="ui inverted vertical footer segment">
   <div class="ui center aligned container">
-    <encuentros-actuales></encuentros-actuales>
-    <div class="ui inverted section divider"></div>
+    <encuentros-actuales *ngIf="enCurso; else noEnCursoBlock"></encuentros-actuales>
+    <ng-template #noEnCursoBlock>
       <img src="assets/images/unpsjb.png" class="ui centered mini image">
-      <div class="ui horizontal inverted small divided link list">
-        <a class="item" href="http://www.dit.ing.unp.edu.ar/">Universidad Nacional de la Patagonia San Juan Bosco - Departamento de Informática - Trelew</a>
+        <div class="ui horizontal inverted small divided link list">
+          <a class="item" href="http://www.dit.ing.unp.edu.ar/">Universidad Nacional de la Patagonia San Juan Bosco - Departamento de Informática - Trelew</a>
       </div>
+    </ng-template>
   </div>
 </div>
