--- a/webclient/src/app/layout/menu/menu.component.html
+++ b/webclient/src/app/layout/menu/menu.component.html
@@ -4,24 +4,10 @@
       <img class="logo" src="/assets/images/unpsjb.png">
       &nbsp;&nbsp;{{title}}
     </a>
-    <a href="#" class="item">Home</a>
-    <div class="ui simple dropdown item">
-      Dropdown <i class="dropdown icon"></i>
-      <div class="menu">
-        <a class="item" href="#">Link Item</a>
-        <a class="item" href="#">Link Item</a>
-        <div class="divider"></div>
-        <div class="header">Header Item</div>
-        <div class="item">
-          <i class="dropdown icon"></i>
-          Sub Menu
-          <div class="menu">
-            <a class="item" href="#">Link Item</a>
-            <a class="item" href="#">Link Item</a>
-          </div>
-        </div>
-        <a class="item" href="#">Link Item</a>
-      </div>
-    </div>
+    <a href="#" class="item active">Scores</a>
+    <a href="#" class="item">Ronda 1</a>
+    <a href="#" class="item">Ronda 2</a>
+    <a href="#" class="item">Ronda 3</a>
+    <a href="#" class="item">Nueva Ronda</a>
   </div>
 </div>
