--- a/templates/index.html
+++ b/templates/index.html
@@ -8,7 +8,7 @@
     <ul>
     <li><a href="/fixture">GraphQL</a></li>
     <li><a href="http://localhost:4200">Web App</a></li>
-    <li><a href="/loads">Loads JSON</a></li>
-    <li><a href="/dumps">Dumps JSON</a></li>
+    <li><a href="/restore">Loads JSON</a></li>
+    <li><a href="/store">Dumps JSON</a></li>
   </body>
 </html>
