--- a/webclient/src/app/layout/main/main.component.html
+++ b/webclient/src/app/layout/main/main.component.html
@@ -1,3 +1,4 @@
 <div class="ui main text container">
+  <ronda-table [ronda]="ronda" *ngFor="let ronda of rondas$ | async"></ronda-table>
   <robots-score-table></robots-score-table>
 </div>
