--- a/webclient/src/app/page-not-found/page-not-found.component.html
+++ b/webclient/src/app/page-not-found/page-not-found.component.html
@@ -1,3 +1,12 @@
-<p>
-  page-not-found works!
-</p>
+<div class="ui centered card">
+  <a class="image" href="#">
+    <img class="ui centered medium image" src="/assets/images/404.png">
+  </a>
+  <div class="content">
+    <a class="header" href="#">404 oops...</a>
+    <div class="meta">
+      <a>page not found</a>
+    </div>
+  </div>
+</div>
+
