--- a/webclient/src/app/layout/menu/menu.component.html
+++ b/webclient/src/app/layout/menu/menu.component.html
@@ -4,8 +4,8 @@
       <img class="logo" src="/assets/images/unpsjb.png">
       &nbsp;&nbsp;{{title}}
     </a>
-    <a class="item" (click)="activar('robots')">Robots</a>
-    <a *ngFor="let ronda of rondas$ | async" class="item" (click)="activar('ronda', ronda)">Ronda {{ronda.numero}}</a>
+    <a class="item" routerLink="/robots" routerLinkActive="active">Robots</a>
+    <a *ngFor="let ronda of rondas$ | async" class="item" [routerLink]="['/ronda', ronda.numero]" routerLinkActive="active">Ronda {{ronda.numero}}</a>
     <a class="item" (click)="generarRonda()" ><div class="ui primary button">Nueva Ronda</div></a>
   </div>
 </div>
