Nuevo esquema para tomar el estado y actualizar con eventos la vista

--- a/webclient/src/app/layout/footer/footer.component.html
+++ b/webclient/src/app/layout/footer/footer.component.html
@@ -1,7 +1,7 @@
 <div class="ui inverted vertical footer segment">
   <div class="ui center aligned container">
-    <encuentros-actuales *ngIf="enCurso; else noEnCursoBlock"></encuentros-actuales>
-    <ng-template #noEnCursoBlock>
+    <encuentros-actuales *ngIf="compitiendo; else noCompitiendoBlock"></encuentros-actuales>
+    <ng-template #noCompitiendoBlock>
       <img src="assets/images/unpsjb.png" class="ui centered mini image">
         <div class="ui horizontal inverted small divided link list">
           <a class="item" href="http://www.dit.ing.unp.edu.ar/">Universidad Nacional de la Patagonia San Juan Bosco - Departamento de Informática - Trelew</a>
