--- a/webclient/src/app/layout/footer/footer.component.html
+++ b/webclient/src/app/layout/footer/footer.component.html
@@ -1,6 +1,6 @@
 <div class="ui inverted vertical footer segment">
   <div class="ui center aligned container">
-    <encuentros-actuales *ngIf="compitiendo; else noCompitiendoBlock"></encuentros-actuales>
+    <encuentros-actuales *ngIf="estado.compitiendo; else noCompitiendoBlock"></encuentros-actuales>
     <ng-template #noCompitiendoBlock>
       <img src="assets/images/unpsjb.png" class="ui centered mini image">
         <div class="ui horizontal inverted small divided link list">
