--- a/webclient/src/app/encuentros-actuales/encuentros-actuales.component.html
+++ b/webclient/src/app/encuentros-actuales/encuentros-actuales.component.html
@@ -1,5 +1,5 @@
-<div class="ui stackable inverted divided grid">
-  <div class="eight wide column" *ngFor="let encuentro of encuentrosActuales$ | async">
+<div class="ui column centered inverted grid" [ngClass]="{'two': TRACKS_EN_PARALELO == 2, 'one': TRACKS_EN_PARALELO == 1}" >
+  <div class="column" *ngFor="let encuentro of encuentrosActuales$ | async">
     <h4 class="ui inverted header">Encuentro {{encuentro.numero}}</h4>
     <encuentro-card [encuentro]="encuentro" ></encuentro-card>
   </div>
