--- a/webclient/src/app/ronda-table/ronda-table.component.html
+++ b/webclient/src/app/ronda-table/ronda-table.component.html
@@ -1,14 +1,18 @@
 <table class="ui very striped basic celled small table">
   <thead>
     <tr>
+      <th class="center aligned two wide">&nbsp;</th>
       <th class="center aligned six wide">Local</th>
-      <th class="center aligned two wide">&nbsp;</th>
-      <th class="center aligned two wide">&nbsp;</th>
+      <th class="center aligned one wide">&nbsp;</th>
+      <th class="center aligned one wide">&nbsp;</th>
       <th class="center aligned six wide">Visitante</th>
     </tr>
   </thead>
   <tbody>
     <tr *ngFor="let encuentro of ronda.encuentros">
+      <td class="left aligned">
+        <h3># {{encuentro.numero}}</h3>
+      </td>
       <td class="right aligned">
         <h4 class="ui image header">
           <img/>
