Fix de la tabla de encuentros sin ronda

--- a/webclient/src/app/encuentro-card/encuentro-card.component.html
+++ b/webclient/src/app/encuentro-card/encuentro-card.component.html
@@ -9,7 +9,7 @@
           {{encuentro.robots[0].nombre}}
         </div>
         <div class="value">
-          {{encuentro.puntos[0] || 0}}
+          {{encuentro.puntos[0]}}
         </div>
       </div>
     </div>
@@ -25,7 +25,7 @@
           {{encuentro.robots[1].nombre}}
         </div>
         <div class="value">
-          {{encuentro.puntos[1] || 0}}
+          {{encuentro.puntos[1]}}
         </div>
       </div>
     </div>
