--- a/webclient/src/app/ronda-table/ronda-table.component.html
+++ b/webclient/src/app/ronda-table/ronda-table.component.html
@@ -1,4 +1,4 @@
-<table class="ui very striped basic celled small table">
+<table class="ui very striped basic celled small table" *ngIf="ronda">
   <thead>
     <tr>
       <th class="center aligned two wide">&nbsp;</th>
@@ -21,10 +21,10 @@
         </h4>
       </td>
       <td class="center aligned" [ngClass]="{'positive': encuentro.puntos[0] > encuentro.puntos[1], 'negative': encuentro.puntos[0] < encuentro.puntos[1]}">
-        <h1>{{encuentro.puntos[0] || 0}}</h1>
+        <h1>{{encuentro.puntos[0]}}</h1>
       </td>
       <td class="center aligned" [ngClass]="{'positive': encuentro.puntos[0] < encuentro.puntos[1], 'negative': encuentro.puntos[0] > encuentro.puntos[1]}">
-        <h1>{{encuentro.puntos[1] || 0}}</h1>
+        <h1>{{encuentro.puntos[1]}}</h1>
       </td>
       <td class="left aligned">
         <h4 class="ui image header">
@@ -35,7 +35,7 @@
     </tr>
   </tbody>
 </table>
-<div *ngIf="ronda.promovidos.length > 0">
+<div *ngIf="ronda && ronda.promovidos.length > 0">
   <h2>Promovidos</h2>
   <h4 class="ui image header" *ngFor="let robot of ronda.promovidos">
     <img src="/assets/images/escudos/{{robot.escudo}}" class="ui large image">
