--- a/webclient/src/app/robots-score-table/robots-score-table.component.html
+++ b/webclient/src/app/robots-score-table/robots-score-table.component.html
@@ -13,7 +13,7 @@
     </tr>
   </thead>
   <tbody>
-    <tr *ngFor="let robot of robotsScore$ | async">
+    <tr *ngFor="let robot of robots">
       <td>
         <h4 class="ui image header">
           <img src="/assets/images/escudos/{{robot.escudo}}" class="ui mini rounded image">
