--- a/templates/index.html
+++ b/templates/index.html
@@ -6,9 +6,17 @@
 </head>
   <body>
     <ul>
-    <li><a href="/fixture">GraphQL</a></li>
-    <li><a href="http://localhost:4200">Web App</a></li>
-    <li><a href="/restore">Loads JSON</a></li>
-    <li><a href="/store">Dumps JSON</a></li>
+      <li><a href="/fixture">GraphQL</a></li>
+      <li><a href="http://localhost:4200">Web App</a></li>
+      <li><a href="/restore">Loads JSON</a></li>
+      <li><a href="/store">Dumps JSON</a></li>
+      <li><a href="/clean">Clean Fixture</a></li>
+      <li><a href="/faker/100">+100 Robots</a></li>
+      <li><a href="/faker/50">+50 Robots</a></li>
+      <li><a href="/faker/10">+10 Robots</a></li>
+      <li><a href="/faker/5">+5 Robots</a></li>
+      <li><a href="/faker/1">+1 Robots</a></li>
+    </ul>
+    {{robots}}
   </body>
 </html>
