--- a/client/src/app/layout/menu/menu.component.html
+++ b/client/src/app/layout/menu/menu.component.html
@@ -5,7 +5,8 @@
       &nbsp;&nbsp;{{title}}
     </a>
     <a class="item" routerLink="/robots" routerLinkActive="active">Robots</a>
-    <a class="item" >
+    <a *ngFor="let fase of fases" class="item" [routerLink]="['/fase', fase.numero]" routerLinkActive="active">{{fase.nombre}}</a>
+    <a class="item" *ngIf="estado && !estado.finalizado && !estado.compitiendo">
       <div class="ui selection dropdown primary">
         Nueva Fase <i class="dropdown icon"></i>
         <div class="menu">
