--- a/client/src/app/layout/menu/menu.component.html
+++ b/client/src/app/layout/menu/menu.component.html
@@ -4,7 +4,7 @@
       <img class="logo" src="/assets/images/unpsjb.png">
       &nbsp;&nbsp;{{title}}
     </a>
-    <a class="item" routerLink="/robots" routerLinkActive="active">Robots</a>
+    <a class="item" routerLink="/general" routerLinkActive="active">General</a>
     <a *ngFor="let fase of fases" class="item" [routerLink]="['/fase', fase.numero]" routerLinkActive="active">{{fase.nombre}}</a>
     <a class="item" *ngIf="estado && !estado.finalizado && !estado.compitiendo">
       <div class="ui selection dropdown primary">
