--- a/client/src/app/page-fase/page-fase.component.html
+++ b/client/src/app/page-fase/page-fase.component.html
@@ -1,3 +1,3 @@
-<div *ngIf="fase && fase.nombre === 'Clasificacion'">
+<div *ngIf="fase && fase.nombre === 'clasificacion'">
   <clasificacion [grupos]="fase.grupos"></clasificacion>
 </div>
