estados para los componentes base

--- a/client/src/app/layout/footer/footer.component.html
+++ b/client/src/app/layout/footer/footer.component.html
@@ -5,4 +5,5 @@
         <a class="item" href="http://www.dit.ing.unp.edu.ar/">Universidad Nacional de la Patagonia San Juan Bosco - Departamento de Informática - Trelew</a>
     </div>
   </div>
+  Estado del fixture {{estado | json}}
 </div>
