--- a/client/src/app/layout/footer/footer.component.html
+++ b/client/src/app/layout/footer/footer.component.html
@@ -2,8 +2,8 @@
   <div class="ui center aligned container">
     <img src="assets/images/unpsjb.png" class="ui centered mini image">
       <div class="ui horizontal inverted small divided link list">
-        <a class="item" href="http://www.dit.ing.unp.edu.ar/">Universidad Nacional de la Patagonia San Juan Bosco - Departamento de Informática - Trelew</a>
+        <a class="item" href="http://www.dit.ing.unp.edu.ar/">Universidad Nacional de la Patagonia San Juan Bosco - Departamento de Informática - Trelew</a><br/>
+        {{estado | json}}
     </div>
   </div>
-  Estado del fixture {{estado | json}}
 </div>
