Mejorando los estados

--- a/client/src/app/components/clasificacion/clasificacion.component.html
+++ b/client/src/app/components/clasificacion/clasificacion.component.html
@@ -1,4 +1,4 @@
-Estado de la fase: {{fase.estado | json}}
+FASE: {{fase.estado | json}}
 <div *ngFor="let grupo of fase.grupos">
   <grupo [grupo]=grupo></grupo>
 </div>
