--- a/client/src/app/components/grupo/grupo.component.html
+++ b/client/src/app/components/grupo/grupo.component.html
@@ -1,8 +1,14 @@
 <div class="ui horizontal divider">
   <h1>{{nombre}}</h1>
 </div>
-Estado del grupo: {{grupo.estado | json}}
+GRUPO: {{grupo.estado | json}}
 <div class="ui segment">
   <robots-score [robots]=robots></robots-score>
   <ronda *ngFor="let ronda of rondas" [ronda]=ronda></ronda>
+  <br>
+  <button 
+    *ngIf="!grupo.estado.finalizado && !grupo.estado.compitiendo"
+    (click)="agregarRonda(grupo.numero)"
+    class="positive ui button" ><i class="plus icon"></i>Ronda
+  </button>
 </div>
