--- a/client/src/app/components/ronda/ronda.component.html
+++ b/client/src/app/components/ronda/ronda.component.html
@@ -1,7 +1,7 @@
 <div class="ui horizontal divider">
   <h3>{{nombre}}</h3>
 </div>
-Estado de la ronda: {{ronda.estado | json}}
+RONDA: {{ronda.estado | json}}
 <table class="ui very striped basic celled small table">
   <thead>
     <tr>
