--- a/client/src/app/page-fase/page-fase.component.html
+++ b/client/src/app/page-fase/page-fase.component.html
@@ -1,6 +1,12 @@
-<div *ngIf="fase && fase.nombre === 'clasificacion'">
+<div *ngIf="fase && fase.tipo === 'clasificacion'">
   <clasificacion [fase]="fase"></clasificacion>
 </div>
-<div *ngIf="fase && fase.nombre === 'final'">
+<div *ngIf="fase && fase.tipo === 'final'">
+  <clasificacion [fase]="fase"></clasificacion>
+</div>
+<div *ngIf="fase && fase.tipo === 'eliminacion'">
+  <clasificacion [fase]="fase"></clasificacion>
+</div>
+<div *ngIf="fase && fase.tipo === 'adhoc'">
   <clasificacion [fase]="fase"></clasificacion>
 </div>
