seleccion de robots

--- a/client/src/app/components/robots-score/robots-score.component.html
+++ b/client/src/app/components/robots-score/robots-score.component.html
@@ -1,7 +1,7 @@
-<table class="ui very striped basic celled small table">
+<table class="ui compact celled definition table">
   <thead>
     <tr>
-      <th class="five wide">Robot</th>
+      <th class="five wide"></th>
       <th class="center aligned one wide"><div data-tooltip="Jugados" data-position="bottom center"><i class="asterisk icon"></i></div></th>
       <th class="center aligned one wide"><div data-tooltip="Triunfos" data-position="bottom center"><i class="plus icon"></i></div></th>
       <th class="center aligned one wide"><div data-tooltip="Empates" data-position="bottom center"><i class="checkmark icon"></i></div></th>
@@ -10,12 +10,13 @@
       <th class="center aligned one wide"><div data-tooltip="En Contra" data-position="bottom center"><i class="minus square icon"></i></div></th>
       <th class="center aligned one wide"><div data-tooltip="Diferencia" data-position="bottom center"><i class="radio icon"></i></div></th>
       <th class="center aligned one wide"><div data-tooltip="Puntos" data-position="bottom center"><i class="selected radio icon"></i></div></th>
+      <th *ngIf="seleccionable" class="one wide">&nbsp;</th>
     </tr>
   </thead>
   <tbody>
     <tr *ngFor="let robot of robots; let i = index">
       <td>
-        <div class="ui ribbon label">#{{i + 1}}</div>
+        <div *ngIf="ordenable" class="ui ribbon label">#{{i + 1}}</div>
         <h4 class="ui image header">
           <img src="/assets/images/escudos/{{robot.escudo}}" class="ui mini rounded image">
             <div class="content">{{robot.nombre}} <div class="sub header">{{robot.escuela}}</div></div>
@@ -29,6 +30,11 @@
       <td class="center aligned">{{robot.score[5]}}</td>
       <td class="center aligned">{{robot.score[6]}}</td>
       <td class="center aligned">{{robot.score[7]}}</td>
+      <td *ngIf="seleccionable">
+        <div class="ui checked checkbox">
+          <input [checked]="seleccion.indexOf(robot.key) != -1" type="checkbox" (click)="checkboxClick($event, robot)"><label>&nbsp;</label>
+        </div>
+      </td>
     </tr>
   </tbody>
 </table>
