Generar Fases AdHoc

--- a/client/src/app/layout/menu/menu.component.html
+++ b/client/src/app/layout/menu/menu.component.html
@@ -13,7 +13,7 @@
           <div class="item">Clasificación</div>
           <div class="item">Eliminación</div>
           <div class="item">Final</div>
-          <div class="item">Ad Hoc</div>
+          <div (click)="generarAdhoc()" class="item">Ad Hoc</div>
         </div>
       </div>
     </a>
