Ahora con modales

--- a/client/src/app/components/grupo/grupo.component.html
+++ b/client/src/app/components/grupo/grupo.component.html
@@ -12,3 +12,9 @@ GRUPO: {{grupo.estado | json}}
     class="positive ui button" ><i class="plus icon"></i>Ronda
   </button>
 </div>
+
+<modal title="Nueva Ronda" class="basic" #rondaModal>
+    <modal-content>
+        <p>Hola</p>
+    </modal-content>
+</modal>
