--- a/client/src/app/layout/modal/modal.component.html
+++ b/client/src/app/layout/modal/modal.component.html
@@ -1,6 +1,6 @@
 <div class="ui modal {{class}}" #modal>
     <i class="close icon"></i>
-    <div [ngClass]="{'icon': icon}" class="ui header">
+    <div [ngClass]="{'icon': icon}" class="header">
         <i *ngIf="icon" class="icon {{icon}}"></i>
         {{title}}
     </div>
