nombres mas apropiados para los componentes

--- a/client/src/app/components/grupo/grupo.component.html
+++ b/client/src/app/components/grupo/grupo.component.html
@@ -2,7 +2,7 @@
   <h1>{{nombre}}</h1>
 </div>
 <div class="ui segment">
-  <robots-score [robots]=robots></robots-score>
+  <score [robots]=robots></score>
   <ronda *ngFor="let ronda of rondas" [ronda]=ronda></ronda>
   <br>
   <button 
