--- a/templates/index.html
+++ b/templates/index.html
@@ -5,18 +5,32 @@
   <title>Hackathon</title>
 </head>
   <body>
+    <h1>Main</h1>
     <ul>
-      <li><a href="/fixture">GraphQL</a></li>
       <li><a href="http://localhost:4200">Web App</a></li>
+      <li><a href="/fixture">GraphQL</a></li>
+    </ul>
+    <h1>Tools</h1>
+    <ul>
       <li><a href="/restore">Loads JSON</a></li>
       <li><a href="/store">Dumps JSON</a></li>
       <li><a href="/clean">Clean Fixture</a></li>
+    </ul>
+    <h1>Cargar de RoboComp Online</h1>  
+    <ul>
+      <li><a href="/robocomp/seguidor">Seguidor de Linea</a></li>
+      <li><a href="/robocomp/sumo">Sumo</a></li>
+      <li><a href="/robocomp/minisumo">Mini Sumo</a></li>
+      <li><a href="/robocomp/futbol">Futbol</a></li>
+    </ul>
+    <h1>Random Play</h1>  
+    <ul>
       <li><a href="/faker/100">+100 Robots</a></li>
       <li><a href="/faker/50">+50 Robots</a></li>
       <li><a href="/faker/10">+10 Robots</a></li>
       <li><a href="/faker/5">+5 Robots</a></li>
       <li><a href="/faker/1">+1 Robots</a></li>
     </ul>
-    {{robots}}
+    Robots cargados: {{robots}}
   </body>
 </html>
