--- a/client/src/app/components/ronda/ronda.component.html
+++ b/client/src/app/components/ronda/ronda.component.html
@@ -1,5 +1,5 @@
 <div class="ui horizontal divider">
-  <h3>{{nombre}}</h3>
+  <h3>{{ronda.nombre}}</h3>
 </div>
 <table class="ui very striped basic celled small table">
   <thead>
