Ganador del fixture

--- a/client/src/app/page-fase/page-fase.component.html
+++ b/client/src/app/page-fase/page-fase.component.html
@@ -3,6 +3,10 @@
 </div>
 <div *ngIf="fase && fase.tipo === 'final'">
   <fase [fase]="fase"></fase>
+  <button 
+    (click)="armarFinal()"
+    class="primary ui button" ><i class="plus icon"></i>Armar Final
+  </button>
 </div>
 <div *ngIf="fase && fase.tipo === 'eliminacion'">
   <fase [fase]="fase"></fase>
