Armando la final

--- a/client/src/app/page-fase/page-fase.component.html
+++ b/client/src/app/page-fase/page-fase.component.html
@@ -5,7 +5,7 @@
   <fase [fase]="fase"></fase>
   <button 
     *ngIf="fase.estado.finalizado && fase.grupos.length === 2"
-    (click)="armarFinal()"
+    (click)="armarFinal(fase.numero)"
     class="primary ui button" ><i class="plus icon"></i>Armar Final
   </button>
 </div>
