--- a/client/src/app/layout/menu/menu.component.html
+++ b/client/src/app/layout/menu/menu.component.html
@@ -1,48 +1,47 @@
 <div class="ui fixed inverted menu">
-  <div class="ui container">
-    <a href="#" class="header item">
-      <img class="logo" src="/assets/images/unpsjb.png">
-      &nbsp;&nbsp;{{title}}
-    </a>
-    <a class="item" routerLink="/general" routerLinkActive="active">General</a>
-    <a *ngFor="let fase of fases" class="item" [routerLink]="['/fase', fase.numero]" routerLinkActive="active">{{fase.nombre}}</a>
-    <a class="item" *ngIf="(estado && estado.iniciado && estado.finalizado)" routerLink="/posiciones" routerLinkActive="posiciones">Posiciones</a>
-    <a class="item" [style.display]="(!estado || estado.finalizado || estado.compitiendo) ? 'none' : 'block'">
-      <div class="ui selection dropdown primary">
-        Nueva Fase <i class="dropdown icon"></i>
-        <div class="menu">
-          <div (click)="clasificacionModal.show()" class="item">Clasificación</div>
-          <div (click)="generarEliminacion()" class="item">Eliminación</div>
-          <div (click)="finalModal.show()" class="item">Final</div>
-          <div (click)="generarAdhoc()" class="item">Ad Hoc</div>
-        </div>
-      </div>
-    </a>
-  </div>
+    <div class="ui container">
+        <a href="http://localhost:5000/" class="header item">
+            <img class="logo" src="/assets/images/unpsjb.png"> &nbsp;&nbsp;{{title}}
+        </a>
+        <a class="item" routerLink="/general" routerLinkActive="active">General</a>
+        <a *ngFor="let fase of fases" class="item" [routerLink]="['/fase', fase.numero]" routerLinkActive="active">{{fase.nombre}}</a>
+        <a class="item" *ngIf="(estado && estado.iniciado && estado.finalizado)" routerLink="/posiciones" routerLinkActive="posiciones">Posiciones</a>
+        <a class="item" [style.display]="(!estado || estado.finalizado || estado.compitiendo) ? 'none' : 'block'">
+            <div class="ui selection dropdown primary">
+                Nueva Fase <i class="dropdown icon"></i>
+                <div class="menu">
+                    <div (click)="clasificacionModal.show()" class="item">Clasificación</div>
+                    <div (click)="generarEliminacion()" class="item">Eliminación</div>
+                    <div (click)="finalModal.show()" class="item">Final</div>
+                    <div (click)="generarAdhoc()" class="item">Ad Hoc</div>
+                </div>
+            </div>
+        </a>
+    </div>
 </div>
 
 <modal title="Clasificación" class="mini" #clasificacionModal>
     <modal-content>
         <div class="ui input corner labeled">
-          <input placeholder="Grupos" type="number" #inputGrupos>
+            <input placeholder="Grupos" type="number" #inputGrupos>
         </div>
         <div class="ui checkbox">
-          <input type="checkbox" name="example" checked="checked" #checkboxEsc>
-          <label>Priorizar grupos con distintas escuelas</label>
+            <input type="checkbox" name="example" checked="checked" #checkboxEsc>
+            <label>Priorizar grupos con distintas escuelas</label>
         </div>
     </modal-content>
     <modal-actions>
-      <div (click)="generarClasificacion()" class="ui positive button">Crear</div>
+        <div (click)="generarClasificacion()" class="ui positive button">Crear</div>
     </modal-actions>
 </modal>
 
 <modal title="Final" class="mini" #finalModal>
     <modal-content>
         <div class="ui input corner labeled">
-          <input placeholder="Jugadores" type="number" #inputJugadores>
+            <input placeholder="Jugadores" type="number" #inputJugadores>
         </div>
     </modal-content>
     <modal-actions>
-      <div (click)="generarFinal()" class="ui positive button">Crear</div>
+        <div (click)="generarFinal()" class="ui positive button">Crear</div>
     </modal-actions>
 </modal>
