--- a/client/src/app/layout/menu/menu.component.html
+++ b/client/src/app/layout/menu/menu.component.html
@@ -1,7 +1,7 @@
 <div class="ui fixed inverted menu">
   <div class="ui container">
     <a href="#" class="header item">
-      <img class="logo" src="/assets/images/unpsjb.png">
+      <img class="logo" src="/assets/images/ppm.jpeg">
       &nbsp;&nbsp;{{title}}
     </a>
     <a class="item" routerLink="/general" routerLinkActive="active">General</a>
