--- a/client/src/app/page-posiciones/page-posiciones.component.html
+++ b/client/src/app/page-posiciones/page-posiciones.component.html
@@ -1,7 +1,7 @@
 <div class="ui two cards">
   <div class="card" *ngFor="let equipo of equipos; let i = index">
       <div class="content">
-          <div class="ui blue statistic">
+          <div class="ui green statistic">
             <div class="value">
               {{i + 1}}
             </div>
@@ -16,7 +16,7 @@
         <a>{{ equipo.encargado.nombre }}</a>
       </div>
       <div class="description">
-        Aca va Todo el equipo
+        <p><strong>Profesor: </strong>{{ equipo.profesor.nombre }}</p>
       </div>
     </div>
     <div class="extra content">
@@ -25,7 +25,7 @@
       </span>
       <span>
         <i class="selected radio icon"></i>
-        Puntos
+        {{ equipo.puntos }}
       </span>
     </div>
   </div>
