Probando nuevo scrapper

--- a/templates/index.html
+++ b/templates/index.html
@@ -10,18 +10,30 @@
       <li><a href="http://localhost:4200">Web App</a></li>
       <li><a href="/fixture">GraphQL</a></li>
     </ul>
+    <h1>Store</h1>
+    <ul>
+      <li><a href="/store/seguidor">Seguidor de Linea</a></li>
+      <li><a href="/store/sumo">Sumo</a></li>
+      <li><a href="/store/minisumo">Mini Sumo</a></li>
+      <li><a href="/store/futbol">Futbol</a></li>
+    </ul>
+    <h1>Restore</h1>
+    <ul>
+      <li><a href="/restore/seguidor">Seguidor de Linea</a></li>
+      <li><a href="/restore/sumo">Sumo</a></li>
+      <li><a href="/restore/minisumo">Mini Sumo</a></li>
+      <li><a href="/restore/futbol">Futbol</a></li>
+    </ul>
+    <h1>Cargar de Scrapper</h1>  
+    <ul>
+      <li><a href="/scrapper/seguidor">Seguidor de Linea</a></li>
+      <li><a href="/scrapper/sumo">Sumo</a></li>
+      <li><a href="/scrapper/minisumo">Mini Sumo</a></li>
+      <li><a href="/scrapper/futbol">Futbol</a></li>
+    </ul>
     <h1>Tools</h1>
     <ul>
-      <li><a href="/restore">Loads JSON</a></li>
-      <li><a href="/store">Dumps JSON</a></li>
       <li><a href="/clean">Clean Fixture</a></li>
-    </ul>
-    <h1>Cargar de RoboComp Online</h1>  
-    <ul>
-      <li><a href="/robocomp/seguidor">Seguidor de Linea</a></li>
-      <li><a href="/robocomp/sumo">Sumo</a></li>
-      <li><a href="/robocomp/minisumo">Mini Sumo</a></li>
-      <li><a href="/robocomp/futbol">Futbol</a></li>
     </ul>
     <h1>Random Play</h1>  
     <ul>
